# rag-knowledge-base

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf
.github/workflows/: ci.yml  docker-publish.yml  pages.yml
assets/: index-D-fhl0hd.js  index-IjYJXYaF.js  index-ZjhM9-4f.js  index-qbBfT6x8.css  index-wTA_m78p.css
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routers/: documents.py  query.py
backend/app/services/: embeddings.py  rag.py  vectorstore.py
backend/tests/: conftest.py  test_documents.py  test_query.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatPanel.jsx  DocumentList.jsx  SourceCard.jsx  UploadPanel.jsx
frontend/src/hooks/: useChat.js  useDocuments.js
